@@ -176,7 +176,7 @@ public class ScrapeParser {
             byte[] bytes = md.digest(input.getBytes(StandardCharsets.UTF_8));
             StringBuilder sb = new StringBuilder();
             for (byte b : bytes) {
-                sb.append(String.format("%02x", b));
+                sb.append("%02x".formatted(b));
             }
             return sb.toString();
         } catch (NoSuchAlgorithmException e) {
